added endpoint to register and generate api key
